--- a/galeria.html
+++ b/galeria.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Banderas</title>
+    <title>Galeria</title>
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
