Ya casi, falta mejorar verificacion de registro

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Estadisticas</title>
+    <title>Estadisticas Mundiales-Estadisticas</title>
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
