--- a/galeria.html
+++ b/galeria.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Galeria</title>
+    <title>Estadisticas Mundiales-Galeria</title>
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -55,9 +55,9 @@
       </div>
     </nav>
 
-    <main class="flex-grow-1">
+    <main class="flex-grow-1 pb-5">
       <h1 class="text-center m-3 text-white">Top 10 banderas mas admiradas</h1>
-      <div class="container">
+      <div class="container mb-5">
         <div class="row g-3">
           <div class="col-6 col-md-4 col-lg-3">
             <img
