--- a/registro.html
+++ b/registro.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Formulario de contacto</title>
+    <title>Estadisticas Mundiales-Registro</title>
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -123,7 +123,8 @@
               <!-- Campo 5: Mensaje -->
               <div class="mb-3">
                 <label for="mensaje" class="form-label"
-                  >Mensaje (opcional)</label
+                  >Deja un detalle sobre sus datos de preferencia
+                  (opcional)</label
                 >
                 <textarea
                   class="form-control"
