--- a/estadisticas.html
+++ b/estadisticas.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="Imagenes/icono.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,6 +47,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link text-light" href="datos-curiosos.html"
+                >Datos Curiosos</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-light" href="registro.html"
                 >Registrarse</a
               >
@@ -62,7 +68,6 @@
             <table
               class="table table-striped table-hover table-bordered d-none d-md-table table-dark border-white"
             >
-              <!-- Oculta tabla en móviles -->
               <thead>
                 <tr>
                   <th scope="col">Orden</th>
@@ -75,7 +80,7 @@
               <tbody id="cuerpoTabla"></tbody>
             </table>
           </div>
-          <!-- Contenedor para cards (solo visible en móviles) -->
+
           <div class="container text-center">
             <div class="row">
               <div class="col-9 offset-1 align-self-center">
@@ -90,7 +95,6 @@
     <footer class="bg-dark text-white py-3 mt-auto">
       <div class="container">
         <div class="row align-items-center">
-          <!-- Columna Redes Sociales -->
           <div class="col-12 col-md-8 col-lg-6 mb-3 mb-md-0">
             <h5 class="mb-2">Nuestras Redes</h5>
             <div class="d-flex flex-wrap gap-2">
@@ -134,7 +138,6 @@
             </div>
           </div>
 
-          <!-- Columna Información -->
           <div class="col-12 col-md-4 col-lg-6 text-md-end">
             <h5 class="text-primary mb-2">Estadísticas Mundiales</h5>
             <div class="d-flex flex-column gap-1">
