--- a/galeria.html
+++ b/galeria.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="Imagenes/icono.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,6 +47,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link text-light" href="datos-curiosos.html"
+                >Datos Curiosos</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-light" href="registro.html"
                 >Registrarse</a
               >
@@ -61,7 +67,7 @@
         <div class="row g-3">
           <div class="col-6 col-md-4 col-lg-3">
             <img
-              src="Banderas/Japon.jpeg"
+              src="Banderas/Argentina.jpg"
               alt=""
               class="img-fluid object-fit-cover"
             />
@@ -75,7 +81,7 @@
           </div>
           <div class="col-6 col-md-4 col-lg-3">
             <img
-              src="Banderas/ReinoUnido.jpeg"
+              src="Banderas/Japon.jpeg"
               alt=""
               class="img-fluid object-fit-cover"
             />
@@ -150,7 +156,6 @@
     <footer class="bg-dark text-white py-3 mt-auto">
       <div class="container">
         <div class="row align-items-center">
-          <!-- Columna Redes Sociales -->
           <div class="col-12 col-md-8 col-lg-6 mb-3 mb-md-0">
             <h5 class="mb-2">Nuestras Redes</h5>
             <div class="d-flex flex-wrap gap-2">
@@ -194,7 +199,6 @@
             </div>
           </div>
 
-          <!-- Columna Información -->
           <div class="col-12 col-md-4 col-lg-6 text-md-end">
             <h5 class="text-primary mb-2">Estadísticas Mundiales</h5>
             <div class="d-flex flex-column gap-1">
