--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="icon" type="image/png" href="Imagenes/icono.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -44,6 +44,11 @@
             <li class="nav-item">
               <a class="nav-link text-light" href="estadisticas.html"
                 >Estadisticas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="datos-curiosos.html"
+                >Datos Curiosos</a
               >
             </li>
             <li class="nav-item">
@@ -135,7 +140,7 @@
                   />
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title text-center">Datos interesantes</h5>
+                  <h5 class="card-title text-center">Datos curiosos</h5>
                 </div>
               </div>
             </div>
@@ -275,7 +280,6 @@
     <footer class="bg-dark text-white py-3 mt-auto">
       <div class="container">
         <div class="row align-items-center">
-          <!-- Columna Redes Sociales -->
           <div class="col-12 col-md-8 col-lg-6 mb-3 mb-md-0">
             <h5 class="mb-2">Nuestras Redes</h5>
             <div class="d-flex flex-wrap gap-2">
@@ -319,7 +323,6 @@
             </div>
           </div>
 
-          <!-- Columna Información -->
           <div class="col-12 col-md-4 col-lg-6 text-md-end">
             <h5 class="text-primary mb-2">Estadísticas Mundiales</h5>
             <div class="d-flex flex-column gap-1">
