--- a/registro.html
+++ b/registro.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="Imagenes/icono.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,6 +47,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link text-light" href="datos-curiosos.html"
+                >Datos Curiosos</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-light" href="registro.html"
                 >Registrarse</a
               >
@@ -69,7 +75,6 @@
               novalidate
               class="bg-black p-4 rounded shadow-sm"
             >
-              <!-- Campo 1: Nombre -->
               <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre completo*</label>
                 <input
@@ -81,7 +86,6 @@
                 <div id="nombreError" class="error-message"></div>
               </div>
 
-              <!-- Campo 2: Email -->
               <div class="mb-3">
                 <label for="email" class="form-label"
                   >Correo electrónico*</label
@@ -95,7 +99,6 @@
                 <div id="emailError" class="error-message"></div>
               </div>
 
-              <!-- Campo 3: Teléfono -->
               <div class="mb-3">
                 <label for="telefono" class="form-label">Teléfono*</label>
                 <input
@@ -108,7 +111,6 @@
                 <div id="telefonoError" class="error-message"></div>
               </div>
 
-              <!-- Campo 4: Frecuencia -->
               <div class="mb-3">
                 <label for="frecuencia" class="form-label"
                   >Con que frecuencia quiere recibir informacion</label
@@ -120,7 +122,6 @@
                 </select>
               </div>
 
-              <!-- Campo 5: Mensaje -->
               <div class="mb-3">
                 <label for="mensaje" class="form-label"
                   >Deja un detalle sobre sus datos de preferencia
@@ -134,7 +135,6 @@
                 ></textarea>
               </div>
 
-              <!-- Campo 6: Fecha Nacimiento -->
               <div class="mb-3">
                 <label for="fecha" class="form-label"
                   >Fecha de nacimiento*</label
@@ -148,7 +148,6 @@
                 <div id="fechaError" class="error-message"></div>
               </div>
 
-              <!-- Términos y condiciones -->
               <div class="mb-3 form-check">
                 <input
                   type="checkbox"
@@ -194,7 +193,6 @@
     <footer class="bg-dark text-white py-3 mt-auto">
       <div class="container">
         <div class="row align-items-center">
-          <!-- Columna Redes Sociales -->
           <div class="col-12 col-md-8 col-lg-6 mb-3 mb-md-0">
             <h5 class="mb-2">Nuestras Redes</h5>
             <div class="d-flex flex-wrap gap-2">
@@ -238,7 +236,6 @@
             </div>
           </div>
 
-          <!-- Columna Información -->
           <div class="col-12 col-md-4 col-lg-6 text-md-end">
             <h5 class="text-primary mb-2">Estadísticas Mundiales</h5>
             <div class="d-flex flex-column gap-1">
