--- a/datos-curiosos.html
+++ b/datos-curiosos.html
@@ -58,7 +58,7 @@
       </div>
     </nav>
 
-    <main class="flex-grow-1 py-4">
+    <main class="flex-grow-1 py-4 mb-5">
       <div class="container">
         <section class="mb-5 text-white">
           <h1 class="text-center mb-4">Datos Curiosos del Mundo</h1>
