--- a/estadisticas.html
+++ b/estadisticas.html
@@ -60,7 +60,7 @@
         </div>
       </div>
     </nav>
-    <main class="flex-grow-1">
+    <main class="flex-grow-1 mb-5">
       <section>
         <div class="container mt-5">
           <h3 class="text-center text-white">Los 10 paises mas poblados</h3>
@@ -84,7 +84,7 @@
           <div class="container text-center">
             <div class="row">
               <div class="col-9 offset-1 align-self-center">
-                <div id="cardsContainer" class="d-md-none"></div>
+                <div id="contenedorCards" class="d-md-none"></div>
               </div>
             </div>
           </div>
