--- a/registro.html
+++ b/registro.html
@@ -61,7 +61,7 @@
       </div>
     </nav>
 
-    <main class="flex-grow-1 mb-4">
+    <main class="flex-grow-1 mb-5">
       <div class="container mt-5">
         <div class="row justify-content-center">
           <div class="col-md-8 col-lg-6">
@@ -169,24 +169,26 @@
         </div>
       </div>
 
-      <div
-        class="toast"
-        role="alert"
-        aria-live="assertive"
-        aria-atomic="true"
-        id="myToast"
-      >
-        <div class="toast-header">
-          <strong class="me-auto">Estadisticas Mundiales</strong>
-          <small class="text-body-secondary">Ahora</small>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="toast"
-            aria-label="Close"
-          ></button>
+      <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div
+          id="Toast"
+          class="toast align-items-center text-white bg-success"
+          role="alert"
+          aria-live="assertive"
+          aria-atomic="true"
+        >
+          <div class="d-flex">
+            <div class="toast-body">
+              <i class="fas fa-check-circle me-2"></i> Registrado correctamente
+            </div>
+            <button
+              type="button"
+              class="btn-close btn-close-white me-2 m-auto"
+              data-bs-dismiss="toast"
+              aria-label="Close"
+            ></button>
+          </div>
         </div>
-        <div class="toast-body">Registrado con exito!</div>
       </div>
     </main>
 
